# LuaWrapper

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
scripts/: common.lua  debug_main.lua  main.lua  proto_main.lua
tests/: debug.cpp  main.cpp  proto.cpp
wrapper/: caller.hpp  lua_arg.hpp  lua_caller.cpp  lua_caller.h  lua_common.h  lua_debugger.cpp  lua_debugger.h  lua_manager.cpp  lua_manager.h  lua_protobuf.cpp  lua_protobuf.h  lua_result.cpp  lua_result.h  lua_result.hpp  lua_wrapper.h
